--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Do you think about <span class="orange">learning to code?</span></h2>
         <p>Learn to code and develop a new career!</p>
         <button>Learn More</button>
-        <img src="code.svg" alt="code" class="gcimage">
+        <img src="./assets/code.svg" alt="code" class="gcimage">
     </div>
 </body>
 </html>
