tweaked the code

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
                     <li><a href="">Custom Training</a></li>
                     <li><a href="">Student Stories</a></li>
                 </ul>
-            <button>Contact Us</button>    
+            <button class="btnstyle">Contact Us</button>    
     </div>       
-    <div class="footer">
-        <h2>Do you think about <span class="orange">learning to code?</span></h2>
-        <p>Learn to code and develop a new career!</p>
-        <button>Learn More</button>
-        <img src="./assets/code.svg" alt="code" class="gcimage">
+    <div class="main">
+        <div class="left">
+            <h2 class="doyouthink">Do you think about <span class="orange">learning to code?</span></h2>
+            <p>Learn to code and develop a new career!</p>
+            <button class="btnstyle">Learn More</button>
+        </div>
+            <img src="./assets/code.svg" alt="two people holding an ellipsis inside angle brackets" class="gcimage">
+ 
     </div>
 </body>
 </html>
